--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>threejs-spark-3dgs-sandbox</title>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="renderCanvas"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
